Home-Projects/k8s-dev/projects/wordpress-deployment/wp-mysql-dep.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
  namespace: wp
spec:
  ports:
  - port: 3306
    protocol: TCP
  selector:
    app: mysql
