Home-Projects/k8s-dev/projects/wordpress-deployment/wp-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: wp-nodeport
  namespace: wp
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30010
  selector:
    app: wordpress
