Home-Projects/k8s-dev/projects/wordpress-deployment/wp-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: wp-ing
  namespace: wp
spec:
  tls:
  - hosts:
    - www.moff.ch
    secretName: wp-secret
  ingressClassName: nginx
  rules:
  - host: www.moff.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
